Now you can add multiple numbers. When you click '=' everything will be reset but the answer will still show on the screen. Next step is to convert longer numbers to scientific notation. Also I need to prevent numbers that are too long from appearing. When an operator is selected it will need to be highlighted instead of there being an operator on the screen.

--- a/styles.css
+++ b/styles.css
@@ -184,6 +184,30 @@
   -ms-user-select: none;
   /* Internet Explorer/Edge */
 }
+.equal {
+  display: flex;
+  font-size: 35px;
+  width: 100%;
+  height: 100%;
+  color: white;
+  justify-content: center;
+  align-items: center;
+  font-family: futura-pt, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  vertical-align: baseline;
+  text-align: center;
+  user-select: none;
+  /* supported by Chrome and Opera */
+  -webkit-user-select: none;
+  /* Safari */
+  -khtml-user-select: none;
+  /* Konqueror HTML */
+  -moz-user-select: none;
+  /* Firefox */
+  -ms-user-select: none;
+  /* Internet Explorer/Edge */
+}
 .divider{
   height: 10px;
 }
